<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/baslik"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
   <EditText
       android:id="@+id/aliciEdit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="textEmailAddress" 
       android:hint="@string/alici" />

   <EditText
       android:id="@+id/konuEdit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/icerik_hakkinda" />

   <EditText
       android:id="@+id/govdeEdit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:ems="10"
       android:hint="@string/mail_govde" />

   <Button
       android:id="@+id/gonderBtn"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
       android:text="@string/mail_gonder" />
    
</LinearLayout>